# Sanchara

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: routes_events.py  routes_summary.py
backend/app/core/: config.py
backend/app/db/: mongo.py
backend/app/models/: __init__.py  event.py
backend/app/repositories/: events.py  in_memory.py
backend/app/services/: __init__.py  errors.py  event_service.py  summary_service.py
backend/docs/: ARCHITECTURE.md
backend/scripts/: seed_demo_events.py
backend/tests/: test_events.py  test_health.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: DashboardCards.tsx  EventForm.tsx
frontend/src/lib/: api.ts
